# emu86

emu86/: AUTHORS  INSTALL  autogen.sh  configure.in  ltmain.sh  mkinstalldirs
emu86/src/: Makefile.am  Makefile.in  common.h  emu86.c  emu86.h  log.c  log.h  timer.c  timer.h
emu86/src/cpu/: Makefile.am  Makefile.in  cpu.c  cpu.h  cpu_debug.c  cpu_debug.h  cpu_exec.c  cpu_exec.h  cpu_fetch.h  cpu_flags.c  cpu_flags.h  cpu_ibinarith.c  cpu_ibinarith.h  cpu_idataptr.c  cpu_idataptr.h  cpu_idecarith.c  cpu_idecarith.h  cpu_iflow.c  cpu_iflow.h  cpu_ilogical.c  cpu_ilogical.h  cpu_ip.c  cpu_ip.h  cpu_ishift.c  cpu_ishift.h  cpu_istack.c  cpu_istack.h  cpu_modrm.h  cpu_regs.c  cpu_regs.h  gen_modrm.pl  ports.c  ports.h
emu86/src/hardware/: Makefile.am  Makefile.in
emu86/src/hardware/DMA/: 8237.c  8237.h
emu86/src/hardware/FDC/: 765.c  765.h
emu86/src/hardware/MDA/: 6845.c  6845.h
emu86/src/hardware/PIC/: 8259A.c  8259A.h
emu86/src/hardware/PIT/: 8254.c  8254.h
emu86/src/hardware/PPI/: 8255A.c  8255A.h
emu86/src/mem/: Makefile.am  Makefile.in  mem.c  mem.h
