AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/mem

noinst_LIBRARIES = libcpu.a
libcpu_a_SOURCES = cpu.c \
		   cpu_regs.c cpu_flags.c cpu_ip.c cpu_exec.c cpu_debug.c \
		   cpu_ishift.c ports.c cpu_istack.c cpu_iflow.c \
		   cpu_ilogical.c cpu_idecarith.c cpu_ibinarith.c \
		   cpu_idataptr.c
